# ApplyProof

./: README.md
apps/api/: pyproject.toml
apps/api/app/: __init__.py  contracts.py  main.py  providers.py  validation.py
apps/api/tests/: test_answer_drafts.py  test_health.py  test_resume_extractions.py
apps/extension/: tsconfig.json  vite.config.ts
apps/extension/public/: background.js  manifest.json
apps/extension/src/: App.test.tsx  App.tsx  ProfileEditor.tsx  answerApi.test.ts  answerApi.ts  autofill.test.ts  autofill.ts  browser.test.ts  browser.ts  content.ts  evidence.test.ts  evidence.ts  inlineAssistant.test.ts  inlineAssistant.ts  jobContext.test.ts  jobContext.ts  manifest.test.ts  pageFill.test.ts  pageFill.ts  profileStorage.test.ts  profileStorage.ts  resumeFileStorage.test.ts  resumeFileStorage.ts  resumeImport.test.ts  resumeImport.ts  resumeTextParser.test.ts  resumeTextParser.ts  styles.css
apps/web-demo/src/: App.test.tsx  App.tsx
docs/: ANSWER_GENERATION_DESIGN.md  BUILD_LOG.md  ROADMAP.md  SITE_COMPATIBILITY.md  SUBMISSION_CHECKLIST.md
